[gd_scene load_steps=2 format=3 uid="uid://cbml5u7dsoh2i"]

[ext_resource type="Script" path="res://scenes/Systems/settings_ui.gd" id="1_pbq36"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pbq36")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 450)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Settings_Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SettingsContainner" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Volume_Section" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Volume
"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/MasterVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/MusicVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="SFXVolumeContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/SFXVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Display_Section" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Display"

[node name="ResolutionContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/ResolutionContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/ResolutionContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullScreenContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/FullScreenContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/SettingsContainner/FullScreenContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Apply_Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
visible = false
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Apply"

[node name="Back_Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"

[connection signal="changed" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_changed"]
[connection signal="changed" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/MasterVolumeContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_changed"]
[connection signal="changed" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/MusicVolumeContainer/MusicVolumeSlider" to="." method="_on_music_volume_changed"]
[connection signal="changed" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/SFXVolumeContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/ResolutionContainer/ResolutionOption" to="." method="_on_resolution_selected"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/SettingsContainner/FullScreenContainer/FullscreenCheck" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/Apply_Button" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/ButtonContainer/Back_Button" to="." method="_on_back_button_pressed"]
